k8s/content-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: acr[SHORT_SUFFIX].azurecr.io/content-api
        resources:
          limits:
            memory: "128Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3001
          hostPort: 80
          protocol: TCP
        securityContext:
            privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  selector:
    app: api
  # type: LoadBalancer
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: api-traffic
