k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: content-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - fabmedical-[SHORT_SUFFIX]-ingress.eastus.cloudapp.azure.com
      secretName: tls-secret
  rules:
  - host: fabmedical-[SHORT_SUFFIX]-ingress.eastus.cloudapp.azure.com
    http:
      paths:
        - backend:
            serviceName: web
            servicePort: 80
          path: /

        - path: /content-api
          backend:
            serviceName: api
            servicePort: 3001
